# scH5Loader

./: .gitattributes  .gitignore  LICENSE  README.md  README.rst  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: Github_tests.yml  publish.yml
dummy_data/: Generate_dummy_data.ipynb
github/workflows/: Github_tests.yml  checker_test.yml
notebooks/: Explore_and_load_sliced_anndata.ipynb  Explore_and_load_sliced_anndata_A1_V1.ipynb  Explore_and_load_sliced_anndata_A1_V1_test_data.ipynb  Explore_and_load_sliced_anndata_V2.ipynb  Explore_and_load_sliced_anndata_example.ipynb
resources/: README.md
src/: __init__.py  exploration.py  utils.py
src/.ipynb_checkpoints/: loading-checkpoint.py  variables-checkpoint.py
src/h5ld/: __init__.py  datasets.py  exploration.py  loading.py
src/h5ld.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scH5Loader/: __init__.py  datasets.py  exploration.py  loading.py
src/scH5Loader.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/scarftools/: __init__.py  datasets.py  exploration.py  loading.py
tests/: conftest.py  test_dataset_initialisation.py  test_exploration_functions.py  test_loading_functions.py
tests/logs/: pytest-logs.txt
