[metadata]
name='to_name'
version='0.1.0'
description='exploration of h5ad single-cell objects and partial data loader'
#license = 
#license_file = LICENSE
author='Antony Rose'
author_email='ar32@sanger.ac.uk'

[options]
packages = 
    loading
    exploration

install_requires = 
    numpy
    pandas
    scanpy
    anndata
    h5py
    scipy
    tqdm
    
python_requires = 
    >=3.6
    
package_dir = 
    =src

zip_safe = 
    no
