[metadata]
name=scarftools
version=0.1.0
description='exploration of h5ad single-cell objects and partial data loader'
#license = 
#license_file = LICENSE
author='Antony Rose'
author_email='ar32@sanger.ac.uk'

[options]
packages = 
    scarftools

install_requires = 
    numpy
    pandas
    #scanpy
    anndata
    h5py
    scipy
    tqdm
    
python_requires = 
    >=3.6
    
package_dir = 
    =src

zip_safe = 
    no

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    
[options.package_data]
scarftools = py.typed

[flake8]
max-line-length = 160