[metadata]
name=scH5Loader
version=0.1.0
description=investigate h5ad contents and load in subset of the original data
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
author=Antony Rose
author_email=antonyrose17@gmail.ac.uk

[options]
packages = 
    h5ld

install_requires = 
    numpy
    pandas
    anndata
    h5py
    scipy
    tqdm
    numba
    
python_requires = 
    >=3.6
    
package_dir = 
    =src

zip_safe = 
    no

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    
[options.package_data]
h5ld = py.typed

[flake8]
max-line-length = 160
